--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,33 @@ br.tall
 {
 	width: 100%;
 }
+
+/*
+* Popups
+*/
+
+#editPlayer
+{
+	display: none;
+
+	width: 300px;
+	height: 160px;
+
+	border: 2px solid #DEDEDE;
+
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+
+	margin: auto;
+}
+
+#editPlayer>.inner
+{
+	width: calc(100% - 12px);
+	height: calc(100% - 20px);
+
+	padding: 12px 6px 8px 6px;
+}
