--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ br.tall
 	width: 100%;
 }
 
-#headings>td:not(#notif)
+#headings>td:not(#notif):not(#closeSession)
 {
 	
 	width: 180px;
@@ -33,7 +33,15 @@ br.tall
 #notif
 {
 	text-align: right;
-	padding-right: 4px;
+	padding-right: 12px;
+}
+
+#closeSession
+{
+	width: 100px;
+
+	text-align: right;
+	padding-right: 1px;
 }
 
 .tabButton
